# dioxus-animate

./: Cargo.toml  readme.md
src/: lib.rs
