[package]
name = "dioxus-animate"
version = "0.3.0"
edition = "2024"
description = "Time-based CSS class manipulation for smooth animations in Dioxus apps"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dsplce-co/dioxus-animate"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
async-std = "1.12.0"
instant = "0.1.13"
gloo = { version = "0.11.0", features = ["utils"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["DomTokenList", "Element"] }
